# GAFog

./: .gitignore  Dockerfile  GA.data  Pipfile  README.md  flask_app.py  fog.ini.mako  fog.ned.mako  fogconfig.json.mako  fogindividual.py  functions.py  ga.py  problem.py  pyproject.toml  requirements.txt  run.sh  run_flask.sh  sample_input.json  sample_input2.json  sample_output.json  sample_output2.json
ChainOptService/: Dockerfile  README.md  fogindividual.py  ga.py  problem.py  sample_input2.json  sample_output.json
CharactService/: Dockerfile  README.md
FogProblem/: problem.py  solution.py  test.py
GA/: fogindividual.py  ga.py
GraphOptService/: dot.py  flask_app.py  graph.dot.mako  make_dot.py  sample_output.json
GraphService/: Dockerfile  dot.py  flask_app.py  graph.dot.mako
MBFD/: mbfd.py  solution_mbfd.py
MM1-MG1-Omnet/: README.md  functions.py  ga.py
Mbfd/: mbfd.py  sample_input2.json  solution_mbfd.py
OptService/: Dockerfile  flask_app.py  optimize.py  sample_input.json  sample_output.json
ProblemGen/: genproblem.py  sensitivity.py
VNS/: problem.py
VNSOptService/: flask_app.py  optsolution.py
best_sol_dumps/: best_sol_iot2_prob-TEST.csv  best_sol_iot2_prob.csv
omnetpp_resources/: FogSensor.ned
results/: graph.gnuplot  output_nfog10_GA_run0.json  output_nfog10_GA_run1.json  output_nfog10_GA_run2.json  output_nfog10_GA_run3.json  output_nfog10_GA_run4.json  output_nfog10_GA_run5.json  output_nfog10_GA_run6.json  output_nfog10_GA_run7.json  output_nfog10_GA_run8.json  output_nfog10_GA_run9.json  output_nfog10_MBFD_run0.json  (+724 more)
(+71 files in other folders)
