[tool.poetry]
name = "gafog"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
Flask = "^2.1.3"
Mako = "^1.2.1"
deap = "^1.3.1"
requests = "^2.28.1"
graphviz = "^0.20.1"
neato = "^1.0.0"
py-gnuplot = "^1.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools==57.0.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
